some learning changes

--- a/site/blueprints/pages/mawi.yml
+++ b/site/blueprints/pages/mawi.yml
@@ -8,3 +8,6 @@ fields:
     type: number
     computed:
       value: "{{ page.wordCount('text') }}"
+  variableName:
+    type: hello
+    label: Greeting
